Fixed width breaking and readability issues
- added press release to news page

--- a/styles.less
+++ b/styles.less
@@ -454,7 +454,8 @@ body {
 				float: left;
 				font: 14px "Myriad Web Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 				color: #999999;
-				line-height: 17px;
+				line-height: 20px;
+				text-indent: 25px;
 			}
 			&:first-child {
 				margin-top: 0;
@@ -564,6 +565,16 @@ body {
 				}
 			}
 		}
+		#news-feed {
+			div.news-item {
+				h3 {
+					font-size: 14px;
+				}
+				p {
+					line-height: 18px;
+				}
+			}
+		}
 		#trait-container {
 			.trait {
 				.image-container {
@@ -601,6 +612,18 @@ body {
 			div {
 				h3 {
 					font-size: 12px;
+				}
+			}
+		}
+		#jump-to {
+			h2 {
+				font-size: 19px;
+			}
+			div {
+				a {
+					h3 {
+						font-size: 16px;
+					}
 				}
 			}
 		}
